@@ -29,7 +29,7 @@ MAIN_OBJS=actions.o actorio.o actors.o args.o delobjs.o drag.o effects.o \
         exult.o gameclk.o gamedat.o \
 	gametxt.o gamewin.o gumps.o imagewin.o items.o lists.o mouse.o \
 	npcnear.o objs.o readnpcs.o segfile.o spells.o tqueue.o usecode.o \
-        useval.o utils.o vec.o vgafile.o
+        useval.o utils.o vec.o vgafile.o schedule.o
 # unused: npctest.o
 PATH_OBJS=Astar.o PathFinder.o Zombie.o path.o
 CONF_OBJS=Configuration.o XMLEntity.o xmldump.o xmlparse.o
